<resources>
    <string name="app_name">ChatApp</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
