<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#DAE0E2">

    <include layout="@layout/bar"
        android:id="@+id/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:padding="10dp"
            android:text="Login"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/email"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword" />



        <Button
            android:id="@+id/login_btn"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:padding="15dp"
            android:text="@string/login"
            android:textSize="20sp"
            android:background="@color/colorPrimaryDark"
            android:textColor="#ffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Forget Your Password?"
            android:layout_marginTop="10dp"
            android:textColor="#4834DF"
            android:textStyle="bold"
            android:id="@+id/forget_pass" />


    </LinearLayout>



</RelativeLayout>